--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shravan Reddy
 #logo: /assets/img/headshot_circle.png
-description: text below image
+description: Data Analyst | Business Intelligence | Data Analytics & AI Integration
 #show_downloads: false
 theme: jekyll-theme-minimal
